@@ -7,6 +7,7 @@ def read(*rnames):
 
 version='0.9dev'
 
+
 setup(name='memphis.view',
       version=version,
       description="A package implementing advanced Page Template patterns.",
@@ -33,25 +34,23 @@ setup(name='memphis.view',
       packages=find_packages(),
       namespace_packages=['memphis'],
       install_requires = ['setuptools',
+                          'pytz',
                           'webob',
-                          'chameleon>=2.0-rc11',
+                          'chameleon',
+                          'simplejson',
+                          'memphis.config',
                           'zope.component',
                           'zope.interface',
-                          'zope.i18n',
-                          'memphis.config >= 0.6',
-                          'simplejson',
                           ],
       extras_require = dict(
         test=['memphis.config [test]',
-              'pyramid',
-              'zope.publisher',
-              'Zope2',
+              'memphis.view [zope]',
+              'memphis.view [pyramid]'],
+        pyramid=['pyramid'],
+        zope=['Zope2',
               'AccessControl',
               'Products.statusmessages',
-              ],
-        pyramid=['pyramid'],
-        zope=['AccessControl',
-              'Products.statusmessages',
+              'zope.i18n',
               'zope.publisher']
         ),
       include_package_data = True,
